ajeitado de mais para deixar sem salvar

--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -17,6 +17,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "collapsed": true,
         "id": "pdf2osN86LOp",
         "outputId": "289ede53-45cc-4e47-9bae-52aa2e5b9623"
       },
@@ -221,100 +222,131 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "iGdNNXL-6LOq"
-      },
       "source": [
-        "## Script de População do banco"
-      ]
+        "# Script para Se conectar no banco"
+      ],
+      "metadata": {
+        "id": "o3wL0_p6DVSu"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "2d_m3N0a6LOr"
-      },
-      "outputs": [],
       "source": [
+        "# Importando bibliotecas\n",
         "import psycopg2\n",
         "from faker import Faker\n",
         "import random\n",
         "\n",
-        "# Função para popular tabelas\n",
-        "def populate_tables():\n",
-        "# Tentando se conectar no banco da AWS\n",
+        "# Função para criar e gerenciar conexão\n",
+        "\n",
+        "def create_connection():\n",
         "    try:\n",
-        "        conn = psycopg2.connect(host=\"db-manu-etluniversityproject-instance.c44vb5orqds7.us-east-1.rds.amazonaws.com\",\n",
-        "                                dbname=\"AWS-University-ETL-DB\",\n",
-        "                                user=\"postgres\",\n",
-        "                                password=\"Emanu0710**\",\n",
-        "                                port=5432)\n",
-        "        cur = conn.cursor()\n",
-        "        fake = Faker()\n",
+        "        conn = psycopg2.connect(\n",
+        "            host=\"db-manu-etluniversityproject-instance.c44vb5orqds7.us-east-1.rds.amazonaws.com\",\n",
+        "            dbname=\"AWS-University-ETL-DB\",\n",
+        "            user=\"postgres\",\n",
+        "            password=\"Emanu0710**\",\n",
+        "            port=5432\n",
+        "        )\n",
         "\n",
-        "        # Definição dos departamentos\n",
-        "        departamentos = [\n",
-        "            ('Engenharia de Software', 'Departamento focado no desenvolvimento de software e tecnologias relacionadas.'),\n",
-        "            ('Ciência da Computação', 'Departamento que aborda a teoria da computação, algoritmos e inteligência artificial.'),\n",
-        "            ('Sistemas de Informação', 'Departamento que lida com sistemas computacionais e suas aplicações em organizações.'),\n",
-        "            ('Análise e Desenvolvimento de Sistemas', 'Departamento voltado para o desenvolvimento e análise de sistemas computacionais.'),\n",
-        "            ('Redes de Computadores', 'Departamento dedicado à infraestrutura e comunicação de redes de computadores.'),\n",
-        "            ('Inteligência Artificial', 'Departamento focado em IA, aprendizado de máquina e suas aplicações.'),\n",
-        "            ('Matemática Aplicada', 'Departamento com ênfase em técnicas matemáticas e suas aplicações em computação.')\n",
-        "        ]\n",
-        "\n",
-        "        # # Inserir departamentos, so precisa rodar uma vez esse aqui\n",
-        "        # for nome_departamento, descricao in departamentos:\n",
-        "        #     cur.execute(\"\"\"\n",
-        "        #         INSERT INTO tb_departamento (nome_departamento, descricao)\n",
-        "        #         VALUES (%s, %s)\n",
-        "        #         \"\"\", (nome_departamento, descricao))\n",
-        "\n",
-        "        # # Definição dos cursos e descrições\n",
-        "        # cursos = [\n",
-        "        #     ('Engenharia de Software', 'Curso sobre desenvolvimento de software.'),\n",
-        "        #     ('Ciência da Computação', 'Curso sobre fundamentos de computação.'),\n",
-        "        #     ('Sistemas de Informação', 'Curso sobre TI e gestão.'),\n",
-        "        #     ('Análise e Desenvolvimento de Sistemas', 'Curso sobre desenvolvimento de sistemas.'),\n",
-        "        #     ('Redes de Computadores', 'Curso sobre redes e comunicação.'),\n",
-        "        #     ('Inteligência Artificial', 'Curso sobre IA e aprendizado de máquina.')\n",
-        "        # ]\n",
-        "\n",
-        "\n",
-        "\n",
-        "        conn.commit()\n",
-        "        cur.close()\n",
-        "        print(\"Dados inseridos com sucesso.\")\n",
-        "    except (Exception, psycopg2.DatabaseError) as error:\n",
-        "        print(f\"Erro ao inserir dados: {error}\")\n",
-        "    finally:\n",
-        "        if conn is not None:\n",
-        "            conn.close()\n",
+        "        print(\"Conexão estabelecida com sucesso.\")\n",
+        "        return conn\n",
+        "    except psycopg2.DatabaseError as error:\n",
+        "        print(f\"Erro ao conectar: {error}\")\n",
+        "        return None\n"
+      ],
+      "metadata": {
+        "id": "gJAtvLusHR6J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Scripts para adicionar data dentro do banco\n",
         "\n"
-      ]
+      ],
+      "metadata": {
+        "id": "4X9oQ2WEH284"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "populate_tables()"
+        "def insert_departamentos(conn):\n",
+        "    departamentos = [\n",
+        "        ('Engenharia de Software', 'Departamento focado no desenvolvimento de software e tecnologias relacionadas.'),\n",
+        "        ('Ciência da Computação', 'Departamento que aborda a teoria da computação, algoritmos e inteligência artificial.'),\n",
+        "        ('Sistemas de Informação', 'Departamento que lida com sistemas computacionais e suas aplicações em organizações.'),\n",
+        "        ('Análise e Desenvolvimento de Sistemas', 'Departamento voltado para o desenvolvimento e análise de sistemas computacionais.'),\n",
+        "        ('Redes de Computadores', 'Departamento dedicado à infraestrutura e comunicação de redes de computadores.'),\n",
+        "        ('Inteligência Artificial', 'Departamento focado em IA, aprendizado de máquina e suas aplicações.'),\n",
+        "        ('Matemática Aplicada', 'Departamento com ênfase em técnicas matemáticas e suas aplicações em computação.')\n",
+        "    ]\n",
+        "\n",
+        "    try:\n",
+        "        cur = conn.cursor()\n",
+        "        for nome, descricao in departamentos:\n",
+        "            cur.execute(\"\"\"\n",
+        "                INSERT INTO tb_departamento (nome_departamento, descricao)\n",
+        "                VALUES (%s, %s)\n",
+        "            \"\"\", (nome, descricao))\n",
+        "        conn.commit()\n",
+        "        print(\"Departamentos inseridos com sucesso.\")\n",
+        "    except Exception as error:\n",
+        "        print(f\"Erro ao inserir departamentos: {error}\")\n",
+        "    finally:\n",
+        "        cur.close()\n",
+        "# Chamada da função\n",
+        "conn = create_connection()\n",
+        "insert_departamentos(conn)\n"
       ],
       "metadata": {
-        "id": "Y9HMytwK8jcx",
-        "outputId": "6155a6f3-2c64-4ba3-a34a-50a628ecbf7c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Ksa45GelElrN"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Dados inseridos com sucesso.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# operações extras(deleta tudo não vei 😭)"
+      ],
+      "metadata": {
+        "id": "puwt-mDhF3HM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def export_to_csv(conn):\n",
+        "    try:\n",
+        "        cur = conn.cursor()\n",
+        "\n",
+        "        tables = [\"tb_aluno\", \"tb_curso\", \"tb_disciplina\", \"tb_turma\", \"tb_matricula\", \"tb_inscricao\", \"tb_turma_aluno\"]\n",
+        "        for table in tables:\n",
+        "            with open(f'{table}.csv', 'w') as f:\n",
+        "                cur.copy_expert(f\"COPY {table} TO STDOUT WITH CSV HEADER\", f)\n",
+        "\n",
+        "        cur.close()\n",
+        "        print(\"Dados exportados com sucesso.\")\n",
+        "    except (Exception, psycopg2.DatabaseError) as error:\n",
+        "        print(f\"Erro ao exportar dados: {error}\")\n",
+        "    finally:\n",
+        "        if conn is not None:\n",
+        "            conn.close()\n",
+        "\n",
+        "\n",
+        "#Export tables\n",
+        "export_to_csv()"
+      ],
+      "metadata": {
+        "id": "JqA2uYQ-F2vk"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -334,9 +366,8 @@
       ],
       "source": [
         "# Limpar as tabelas\n",
-        "def clean_tables():\n",
+        "def clean_tables(conn):\n",
         "    try:\n",
-        "        conn = psycopg2.connect(host=\"localhost\", dbname=\"gestao_universitaria_ETL\", user=\"postgres\", password=\"0710\", port=5432)\n",
         "        cur = conn.cursor()\n",
         "        truncate_sql = \"\"\"TRUNCATE TABLE tb_turma_aluno, tb_inscricao, tb_matricula, tb_turma, tb_disciplina, tb_curso, tb_aluno RESTART IDENTITY CASCADE;\"\"\"\n",
         "        cur.execute(truncate_sql)\n",
@@ -353,56 +384,6 @@
         "\n",
         "clean_tables()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "J-LbmDZU6LOu",
-        "outputId": "4c154d99-c6b6-40e8-d452-ef815ea0bff0"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Dados exportados com sucesso.\n"
-          ]
-        }
-      ],
-      "source": [
-        "\n",
-        "def export_to_csv():\n",
-        "    try:\n",
-        "        conn = psycopg2.connect(host=\"localhost\", dbname=\"gestao_universitaria_ETL\", user=\"postgres\", password=\"0710\", port=5432)\n",
-        "        cur = conn.cursor()\n",
-        "\n",
-        "        tables = [\"tb_aluno\", \"tb_curso\", \"tb_disciplina\", \"tb_turma\", \"tb_matricula\", \"tb_inscricao\", \"tb_turma_aluno\"]\n",
-        "        for table in tables:\n",
-        "            with open(f'{table}.csv', 'w') as f:\n",
-        "                cur.copy_expert(f\"COPY {table} TO STDOUT WITH CSV HEADER\", f)\n",
-        "\n",
-        "        cur.close()\n",
-        "        print(\"Dados exportados com sucesso.\")\n",
-        "    except (Exception, psycopg2.DatabaseError) as error:\n",
-        "        print(f\"Erro ao exportar dados: {error}\")\n",
-        "    finally:\n",
-        "        if conn is not None:\n",
-        "            conn.close()\n",
-        "\n",
-        "\n",
-        "#Export tables\n",
-        "export_to_csv()\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "zPWOMLwc6LOu"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -424,7 +405,8 @@
       "version": "3.12.4"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "nbformat": 4,
