conections tudo ok

--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -223,47 +223,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Script para Se conectar no banco"
-      ],
-      "metadata": {
-        "id": "o3wL0_p6DVSu"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Importando bibliotecas\n",
-        "import psycopg2\n",
-        "from faker import Faker\n",
-        "import random\n",
-        "\n",
-        "# Função para criar e gerenciar conexão\n",
-        "\n",
-        "def create_connection():\n",
-        "    try:\n",
-        "        conn = psycopg2.connect(\n",
-        "            host=\"db-manu-etluniversityproject-instance.c44vb5orqds7.us-east-1.rds.amazonaws.com\",\n",
-        "            dbname=\"AWS-University-ETL-DB\",\n",
-        "            user=\"postgres\",\n",
-        "            password=\"Emanu0710**\",\n",
-        "            port=5432\n",
-        "        )\n",
-        "\n",
-        "        print(\"Conexão estabelecida com sucesso.\")\n",
-        "        return conn\n",
-        "    except psycopg2.DatabaseError as error:\n",
-        "        print(f\"Erro ao conectar: {error}\")\n",
-        "        return None\n"
-      ],
-      "metadata": {
-        "id": "gJAtvLusHR6J"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Scripts para adicionar data dentro do banco\n",
         "\n"
       ],
@@ -274,39 +233,102 @@
     {
       "cell_type": "code",
       "source": [
-        "def insert_departamentos(conn):\n",
-        "    departamentos = [\n",
-        "        ('Engenharia de Software', 'Departamento focado no desenvolvimento de software e tecnologias relacionadas.'),\n",
-        "        ('Ciência da Computação', 'Departamento que aborda a teoria da computação, algoritmos e inteligência artificial.'),\n",
-        "        ('Sistemas de Informação', 'Departamento que lida com sistemas computacionais e suas aplicações em organizações.'),\n",
-        "        ('Análise e Desenvolvimento de Sistemas', 'Departamento voltado para o desenvolvimento e análise de sistemas computacionais.'),\n",
-        "        ('Redes de Computadores', 'Departamento dedicado à infraestrutura e comunicação de redes de computadores.'),\n",
-        "        ('Inteligência Artificial', 'Departamento focado em IA, aprendizado de máquina e suas aplicações.'),\n",
-        "        ('Matemática Aplicada', 'Departamento com ênfase em técnicas matemáticas e suas aplicações em computação.')\n",
-        "    ]\n",
+        "import psycopg2\n",
         "\n",
+        "# Função para criar a conexão\n",
+        "def create_connection():\n",
         "    try:\n",
-        "        cur = conn.cursor()\n",
-        "        for nome, descricao in departamentos:\n",
-        "            cur.execute(\"\"\"\n",
-        "                INSERT INTO tb_departamento (nome_departamento, descricao)\n",
-        "                VALUES (%s, %s)\n",
-        "            \"\"\", (nome, descricao))\n",
-        "        conn.commit()\n",
-        "        print(\"Departamentos inseridos com sucesso.\")\n",
+        "        conn = psycopg2.connect(\n",
+        "            host=\"db-manu-etluniversityproject-instance.c44vb5orqds7.us-east-1.rds.amazonaws.com\",\n",
+        "            dbname=\"AWS-University-ETL-DB\",\n",
+        "            user=\"postgres\",\n",
+        "            password=\"Emanu0710**\",\n",
+        "            port=5432\n",
+        "        )\n",
+        "\n",
+        "        return conn\n",
         "    except Exception as error:\n",
-        "        print(f\"Erro ao inserir departamentos: {error}\")\n",
-        "    finally:\n",
-        "        cur.close()\n",
-        "# Chamada da função\n",
-        "conn = create_connection()\n",
-        "insert_departamentos(conn)\n"
+        "        print(f\"Erro ao conectar ao banco de dados: {error}\")\n",
+        "        return None\n",
+        "create_connection()"
       ],
       "metadata": {
-        "id": "Ksa45GelElrN"
+        "id": "Ksa45GelElrN",
+        "outputId": "a316ca7f-ebfc-4ed4-c662-53db4f60e6fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<connection object at 0x7cd73b07e0c0; dsn: 'user=postgres password=xxx dbname=AWS-University-ETL-DB host=db-manu-etluniversityproject-instance.c44vb5orqds7.us-east-1.rds.amazonaws.com port=5432', closed: 0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def insert_cursos():\n",
+        "    conn = create_connection()\n",
+        "    if conn:\n",
+        "        try:\n",
+        "            cur = conn.cursor()\n",
+        "\n",
+        "            cursos = [\n",
+        "                ('Engenharia de Software', 'Curso que abrange o desenvolvimento de software, desde a análise de requisitos até a manutenção.'),\n",
+        "                ('Ciência da Computação', 'Curso focado nos fundamentos teóricos e práticos da computação e desenvolvimento de sistemas.'),\n",
+        "                ('Sistemas de Informação', 'Curso que combina TI com gestão, voltado para o desenvolvimento e gerenciamento de sistemas de informação.'),\n",
+        "                ('Análise e Desenvolvimento de Sistemas', 'Curso que prepara profissionais para projetar, desenvolver e implementar sistemas de software.'),\n",
+        "                ('Redes de Computadores', 'Curso voltado para a infraestrutura e comunicação entre computadores em redes.'),\n",
+        "                ('Inteligência Artificial', 'Curso focado em aprendizado de máquina, redes neurais, e outras áreas da IA.'),\n",
+        "                ('Engenharia de Controle e Automação', 'Curso voltado para automação industrial e sistemas de controle.'),\n",
+        "                ('Segurança da Informação', 'Curso que aborda a proteção de dados e sistemas contra ataques e acessos não autorizados.')\n",
+        "            ]\n",
+        "\n",
+        "            for nome_curso, descricao in cursos:\n",
+        "                cur.execute(\"\"\"\n",
+        "                    INSERT INTO tb_curso (nome, descricao)\n",
+        "                    VALUES (%s, %s)\n",
+        "                    RETURNING id_curso\n",
+        "                \"\"\", (nome_curso, descricao))\n",
+        "\n",
+        "            conn.commit()\n",
+        "            print(\"Cursos inseridos com sucesso.\")\n",
+        "        except Exception as error:\n",
+        "            print(f\"Erro ao inserir cursos: {error}\")\n",
+        "        finally:\n",
+        "            cur.close()\n",
+        "            conn.close()\n",
+        "insert_cursos()\n"
+      ],
+      "metadata": {
+        "id": "FPsqKqwYJRft",
+        "outputId": "64455654-0bd6-4659-9dd8-f2f351a6f2aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Erro ao inserir cursos: column \"nome\" of relation \"tb_curso\" does not exist\n",
+            "LINE 2:                     INSERT INTO tb_curso (nome, descricao)\n",
+            "                                                  ^\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
