script para exportar csv das tabelas

--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -54,7 +54,7 @@
         "            host=\"db-manu-etluniversityproject-instance.c44vb5orqds7.us-east-1.rds.amazonaws.com\",\n",
         "            dbname=\"AWS-University-ETL-DB\",\n",
         "            user=\"postgres\",\n",
-        "            password=\"Emanu0710**\",\n",
+        "            password=\"HACKEIA N VEI😭)\",\n",
         "            port=5432\n",
         "        )\n",
         "\n",
@@ -65,10 +65,25 @@
         "create_connection()"
       ],
       "metadata": {
-        "id": "Ksa45GelElrN"
+        "id": "Ksa45GelElrN",
+        "outputId": "80cd8cc8-c10e-42a2-b99c-e4d61390e8ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<connection object at 0x7d541eb42700; dsn: 'user=postgres password=xxx dbname=AWS-University-ETL-DB host=db-manu-etluniversityproject-instance.c44vb5orqds7.us-east-1.rds.amazonaws.com port=5432', closed: 0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -443,6 +458,60 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Importar CSVS"
+      ],
+      "metadata": {
+        "id": "E8qSeQVyLNGe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import psycopg2\n",
+        "import os\n",
+        "\n",
+        "def export_to_csv():\n",
+        "\n",
+        "    try:\n",
+        "        conn = create_connection()\n",
+        "        cur = conn.cursor()\n",
+        "        tables = [\"tb_aluno\", \"tb_curso\", \"tb_disciplina\", \"tb_professor\"]\n",
+        "        for table in tables:\n",
+        "            with open(f'{table}.csv', 'w', newline='') as f:\n",
+        "                cur.copy_expert(f\"COPY {table} TO STDOUT WITH CSV HEADER\", f)\n",
+        "\n",
+        "        cur.close()\n",
+        "        print(\"Dados exportados com sucesso.\")\n",
+        "    except (Exception, psycopg2.DatabaseError) as error:\n",
+        "        print(f\"Erro ao exportar dados: {error}\")\n",
+        "    finally:\n",
+        "        if conn is not None:\n",
+        "            cur.close()\n",
+        "            conn.close()\n",
+        "\n",
+        "export_to_csv()\n"
+      ],
+      "metadata": {
+        "id": "3abs_YaUJxRq",
+        "outputId": "754ae45f-7a25-4b28-fb51-25838102b01e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dados exportados com sucesso.\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
