--- a/python_scripts/main.ipynb
+++ b/python_scripts/main.ipynb
@@ -25,11 +25,11 @@
       "metadata": {
         "collapsed": true,
         "id": "pdf2osN86LOp",
-        "outputId": "c0367a32-1f2c-46d3-ae24-05ab6a2a04fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "c0367a32-1f2c-46d3-ae24-05ab6a2a04fe"
       },
       "outputs": [
         {
@@ -543,10 +543,10 @@
       ],
       "metadata": {
         "id": "3EPldY6rENWE",
-        "outputId": "9ec31a09-f05b-4cad-8ce3-95847e558e55",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9ec31a09-f05b-4cad-8ce3-95847e558e55"
       },
       "execution_count": 18,
       "outputs": [
@@ -1819,7 +1819,7 @@
         "            professores_batch = []\n",
         "            professor_disciplina_batch = set()\n",
         "\n",
-        "            max_professores = 1000  # Define quantos professores deseja criar\n",
+        "            max_professores = 10000  # Define quantos professores deseja criar\n",
         "            disciplinas_por_professor_range = (2, 5)  # Min e max de disciplinas por professor\n",
         "\n",
         "            while len(professores_batch) < max_professores:\n",
@@ -1866,7 +1866,25 @@
         "            if professores_batch:\n",
         "                cur.executemany(\"\"\"\n",
         "                    INSERT INTO tb_professor (nome_professor, email_professor, id_departamento, telefone, endereco, matricula, cpf)\n",
-        "                    VALUES\n"
+        "                    VALUES (%s, %s, %s, %s, %s, %s, %s)\n",
+        "                \"\"\", professores_batch)\n",
+        "\n",
+        "            if professor_disciplina_batch:\n",
+        "                cur.executemany(\"\"\"\n",
+        "                    INSERT INTO tb_professor_disciplina (matricula_professor, id_disciplina, semestre, descricao)\n",
+        "                    VALUES (%s, %s, %s, %s)\n",
+        "                \"\"\", list(professor_disciplina_batch))\n",
+        "\n",
+        "            conn.commit()\n",
+        "            print(\"Professores e associações inseridos com sucesso.\")\n",
+        "        except Exception as error:\n",
+        "            print(f\"Erro ao inserir professores: {error}\")\n",
+        "            conn.rollback()\n",
+        "        finally:\n",
+        "            cur.close()\n",
+        "            conn.close()\n",
+        "\n",
+        "inserir_professores_baseado_em_disciplinas()\n"
       ],
       "metadata": {
         "id": "MY7mlcEZPtFu"
